# nswja-wagtail

./: .dockerignore  .editorconfig  .env.example  .gitignore  Dockerfile  README.md  fly.toml  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
.github/: dependabot.yml
.github/workflows/: fly-deploy.yaml
djangosite/: urls.py  wsgi.py
djangosite/pages/: blocks.py  context_processors.py  mixins.py  models.py
djangosite/pages/migrations/: 0001_initial.py  0002_add_menu_sort_order.py  0002_homepage.py  0003_generalpage_cta_cards.py  0004_alter_aboutpage_core_team.py  0005_remove_generalpage_accordions.py
djangosite/pages/templatetags/: navigation_tags.py
djangosite/settings/: base.py  dev.py  production.py
djangosite/site_settings/: models.py
djangosite/site_settings/migrations/: 0001_initial.py
static/css/: tailwind.css
templates/: 404.html  500.html  base.html
templates/blocks/: accordion_item_block.html  board_member_block.html  board_members.html  core_team_block.html  cta_card_block.html  form_block.html
templates/includes/: accordion.html  board_members.html  contact.html  core_team.html  cta_cards.html  ellipses.html  footer.html  form_downloads.html  header.html  hero_section.html  rich_text.html
templates/pages/: about_page.html  forms_page.html  general_page.html  home_page.html
