[project]
name = "nja-wagtail"
version = "0.1.0"
description = "Basic CMS for NSW Jockeys Association"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "boto3>=1.35.90",
  "dj-database-url>=2.3.0",
  "django-extensions>=3.2.3",
  "django-storages>=1.14.4",
  "gunicorn>=23.0.0",
  "psycopg>=3.2.3",
  "python-dotenv>=1.0.1",
  "ruff>=0.8.4",
  "sentry-sdk[django]>=2.21.0",
  "wagtail>=6.3.1",
  "whitenoise>=6.8.2",
]

[tool.ruff.lint]
exclude = [".venv", ".vscode", ".github", "**/migrations"]
select = [
  # pycodestyle
  "E",
  # pycodestyle warnings
  "W",
  # Pyflakes
  "F",

  ## Flake8 plugins
  "UP",
  # flake8-bugbear
  "B",
  # flake8-comprehensions
  "C",
  # flake8-django
  "DJ",
  # flake8-bandit
  "S",
  # flake8-simplify
  "SIM",

  # isort
  "I",
  # McCabe complexity
  "C901",
  # python refactoring
  "PLR",
  # tryexcept/exception handling
  "TRY",
  "BLE",
  "RSE",
  # Return statements
  "RET",
  # Built-in shadowing
  "A",
  # Executable shebang file
  "EXE",
  # Implicit namespace package
  "INP",
  # Type checking imports
  "TCH",
  # Be specifical about type ignores
  "PGH",
  # Ruff specific rules
  "RUF",
]

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 5.
max-complexity = 5
